[gd_scene load_steps=31 format=3 uid="uid://y4m5flfwi11g"]

[ext_resource type="Script" path="res://scripts/phase/phase.gd" id="1_c6ei4"]
[ext_resource type="Script" path="res://scripts/phase/back_phase.gd" id="2_1sfdl"]
[ext_resource type="TileSet" uid="uid://ryxo0pnmuwoh" path="res://resources/tileset02.tres" id="3_tmfby"]
[ext_resource type="Script" path="res://scripts/env/phase_tile_map.gd" id="4_fsb1h"]
[ext_resource type="Script" path="res://scripts/phase/phase_component.gd" id="5_snius"]
[ext_resource type="Material" uid="uid://cs84fre4c3uag" path="res://resources/shader_material.tres" id="6_scis1"]
[ext_resource type="Script" path="res://scripts/ui/shader_follow.gd" id="7_1ut1m"]
[ext_resource type="Script" path="res://scripts/phase/front_phase.gd" id="8_amtbb"]
[ext_resource type="TileSet" uid="uid://b756xt3jbt32n" path="res://resources/tileset01.tres" id="9_bnvih"]
[ext_resource type="Texture2D" uid="uid://b0ghmymmdilq5" path="res://assets/env/basic_tiles.aseprite" id="10_nqiu7"]
[ext_resource type="Script" path="res://scripts/env/lvl1_special.gd" id="11_vqrrg"]
[ext_resource type="Theme" uid="uid://dardhytj07eaw" path="res://resources/theme.tres" id="12_7rmdw"]
[ext_resource type="SpriteFrames" uid="uid://juub43ohjs3u" path="res://assets/player/person02.aseprite" id="12_8s6d8"]
[ext_resource type="Script" path="res://scripts/env/camera_bounds.gd" id="13_4xv4a"]
[ext_resource type="AudioStream" uid="uid://b6g0g0mxpchc8" path="res://assets/audio/gameend.wav" id="13_ojj7r"]
[ext_resource type="PackedScene" uid="uid://drjqa4ebxxvs0" path="res://scenes/narrator.tscn" id="14_nw67w"]
[ext_resource type="Script" path="res://scripts/ui/camera.gd" id="15_1wtht"]
[ext_resource type="PackedScene" uid="uid://f8t2hvaf7ue1" path="res://scenes/player.tscn" id="16_kqhd0"]
[ext_resource type="PackedScene" uid="uid://dhsflfjd7it64" path="res://scenes/pause_menu.tscn" id="17_f26qw"]
[ext_resource type="Script" path="res://scripts/PlayerEnabler2.gd" id="18_lgo8h"]
[ext_resource type="Script" path="res://scripts/player_detector.gd" id="19_5yjjh"]
[ext_resource type="Script" path="res://scripts/fade_rect.gd" id="20_k6two"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cp412"]
texture = ExtResource("10_nqiu7")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_7qsuq"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_cp412")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxk8i"]
size = Vector2(302, 181)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mv2g"]
size = Vector2(98, 323)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7wsu"]
size = Vector2(306, 145.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ep5xb"]
size = Vector2(240, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi03i"]
size = Vector2(306, 145.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0hw2"]
size = Vector2(239, 184)

[node name="Node2D" type="Node2D"]

[node name="Phase" type="Node2D" parent="."]
script = ExtResource("1_c6ei4")

[node name="BackPhase" type="Node2D" parent="Phase"]
script = ExtResource("2_1sfdl")

[node name="TileMap" type="TileMap" parent="Phase/BackPhase"]
tile_set = ExtResource("3_tmfby")
format = 2
layer_0/tile_data = PackedInt32Array(589862, 1, 0, 589863, 1, 0, 589864, 1, 0, 589865, 1, 0, 589866, 1, 0, 589867, 1, 0, 589868, 1, 0, 589869, 1, 0, 589870, 1, 0, 589871, 1, 0, 589872, 1, 0, -262116, 1, 0, -262117, 1, 0, -262118, 1, 0, -262128, 1, 0, -262129, 1, 0, -262130, 1, 0, -1638437, 1, 0, -1638436, 1, 0, -1638435, 1, 0, -1638434, 1, 0, -1638433, 1, 0, -1638432, 1, 0, -1638431, 1, 0, -1638429, 1, 0, -1638430, 1, 0, -1638438, 1, 0, -1900569, 1, 0, -1900570, 1, 0, -1900568, 1, 0, -1900567, 1, 0, -1900565, 1, 0, -1900564, 1, 0, -1900563, 1, 0, -1835027, 1, 0, -1769491, 1, 0, -1703955, 1, 0, -1638419, 1, 0, -1900566, 1, 0)
script = ExtResource("4_fsb1h")

[node name="PhaseComponent" type="Node" parent="Phase/BackPhase/TileMap"]
script = ExtResource("5_snius")

[node name="Shader" type="ColorRect" parent="Phase"]
material = ExtResource("6_scis1")
offset_left = -455.0
offset_top = -596.0
offset_right = 107.0
offset_bottom = -66.0
script = ExtResource("7_1ut1m")

[node name="FrontPhase" type="Node2D" parent="Phase"]
script = ExtResource("8_amtbb")

[node name="TileMap2" type="TileMap" parent="Phase/FrontPhase"]
tile_set = ExtResource("9_bnvih")
format = 2
layer_0/tile_data = PackedInt32Array(1048613, 0, 0, 1114149, 0, 0, 1179685, 0, 0, 1245221, 0, 0, 1310757, 0, 0, 48, 0, 0, 47, 0, 0, 46, 0, 0, 45, 0, 0, 44, 0, 0, 43, 0, 0, 42, 0, 0, 41, 0, 0, 40, 0, 0, 39, 0, 0, 38, 0, 0, -65502, 0, 0, -65503, 0, 0, -65504, 0, 0, -65514, 0, 0, -65515, 0, 0, -65516, 0, 0, -458758, 0, 0, -458759, 0, 0, -458760, 0, 0, -458761, 0, 0, -458762, 0, 0, -458763, 0, 0, -458764, 0, 0, -458765, 0, 0, -458766, 0, 0, -458767, 0, 0, -458768, 0, 0, -524304, 0, 0, -589840, 0, 0, -655376, 0, 0, -720912, 0, 0, -786448, 0, 0, -851984, 0, 0, -917520, 0, 0, -458780, 0, 0, -458779, 0, 0, -458778, 0, 0, -458777, 0, 0, -458776, 0, 0, -458775, 0, 0, -458774, 0, 0, -917519, 0, 0, -917518, 0, 0, -458773, 0, 0, -458772, 0, 0, -2818074, 0, 0, -2424859, 0, 0, -2490395, 0, 0, -2555931, 0, 0, -2621467, 0, 0, -2687003, 0, 0, -2752539, 0, 0, -2162715, 0, 0, -2228251, 0, 0, -2293787, 0, 0, -2359323, 0, 0)
script = ExtResource("4_fsb1h")

[node name="PhaseComponent" type="Node" parent="Phase/FrontPhase/TileMap2"]
script = ExtResource("5_snius")

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_7qsuq")
format = 2
layer_0/tile_data = PackedInt32Array(0, 2, 0, 65536, 2, 0, 131072, 2, 0, 196608, 2, 0, 262144, 2, 0, 327680, 2, 0, 393216, 2, 0, 458752, 2, 0, 524288, 2, 0, 589824, 2, 0, 655360, 2, 0, 720896, 2, 0, 786432, 2, 0, 851968, 2, 0, 917504, 2, 0, 983040, 2, 0, 1048576, 2, 0, 1114112, 2, 0, 1179648, 2, 0, 1245184, 2, 0, 1310720, 2, 0, 1376256, 2, 0, 1376257, 2, 0, 1376258, 2, 0, 1376259, 2, 0, 1376260, 2, 0, 1376261, 2, 0, 1376262, 2, 0, 1376263, 2, 0, 1376264, 2, 0, 1376265, 2, 0, 1376266, 2, 0, 1376267, 2, 0, 1376268, 2, 0, 1376269, 2, 0, 1376270, 2, 0, 1376271, 2, 0, 1376272, 2, 0, 1376273, 2, 0, 1376274, 2, 0, 1376275, 2, 0, 1376276, 2, 0, 1376277, 2, 0, 1376278, 2, 0, 1376279, 2, 0, 1376280, 2, 0, 1376281, 2, 0, 1376282, 2, 0, 1376283, 2, 0, 1376284, 2, 0, 1376285, 2, 0, 1441821, 2, 0, 1441820, 2, 0, 1441819, 2, 0, 1441818, 2, 0, 1441817, 2, 0, 1441816, 2, 0, 1441815, 2, 0, 1441814, 2, 0, 1441813, 2, 0, 1441812, 2, 0, 1441811, 2, 0, 1441810, 2, 0, 1441809, 2, 0, 1441808, 2, 0, 1441807, 2, 0, 1441806, 2, 0, 1441805, 2, 0, 1441804, 2, 0, 1441803, 2, 0, 1441802, 2, 0, 1441801, 2, 0, 1441800, 2, 0, 1441799, 2, 0, 1441798, 2, 0, 1441797, 2, 0, 1441796, 2, 0, 1441795, 2, 0, 1441794, 2, 0, 1441793, 2, 0, 1441792, 2, 0, 1376286, 2, 0, 1376287, 2, 0, 1376288, 2, 0, 1376289, 2, 0, 1376290, 2, 0, 1376291, 2, 0, 1441827, 2, 0, 1441826, 2, 0, 1441825, 2, 0, 1441824, 2, 0, 1441823, 2, 0, 1441822, 2, 0, 37, 2, 0, 1507328, 2, 0, 1572864, 2, 0, 1638400, 2, 0, 1769472, 2, 0, 1835008, 2, 0, 1900544, 2, 0, 1507329, 2, 0, 1572865, 2, 0, 1638401, 2, 0, 1769473, 2, 0, 1835009, 2, 0, 1900545, 2, 0, 1507330, 2, 0, 1572866, 2, 0, 1638402, 2, 0, 1769474, 2, 0, 1835010, 2, 0, 1900546, 2, 0, 1507331, 2, 0, 1572867, 2, 0, 1638403, 2, 0, 1769475, 2, 0, 1835011, 2, 0, 1900547, 2, 0, 1507332, 2, 0, 1572868, 2, 0, 1638404, 2, 0, 1769476, 2, 0, 1835012, 2, 0, 1900548, 2, 0, 1507333, 2, 0, 1572869, 2, 0, 1638405, 2, 0, 1769477, 2, 0, 1835013, 2, 0, 1900549, 2, 0, 1507334, 2, 0, 1572870, 2, 0, 1638406, 2, 0, 1769478, 2, 0, 1835014, 2, 0, 1900550, 2, 0, 1507335, 2, 0, 1572871, 2, 0, 1638407, 2, 0, 1769479, 2, 0, 1835015, 2, 0, 1900551, 2, 0, 1507336, 2, 0, 1572872, 2, 0, 1638408, 2, 0, 1703944, 2, 0, 1835016, 2, 0, 1900552, 2, 0, 1507337, 2, 0, 1572873, 2, 0, 1638409, 2, 0, 1703945, 2, 0, 1835017, 2, 0, 1900553, 2, 0, 1507338, 2, 0, 1572874, 2, 0, 1638410, 2, 0, 1703946, 2, 0, 1835018, 2, 0, 1900554, 2, 0, 1507339, 2, 0, 1572875, 2, 0, 1638411, 2, 0, 1703947, 2, 0, 1835019, 2, 0, 1900555, 2, 0, 1507340, 2, 0, 1572876, 2, 0, 1638412, 2, 0, 1703948, 2, 0, 1835020, 2, 0, 1900556, 2, 0, 1507341, 2, 0, 1572877, 2, 0, 1638413, 2, 0, 1703949, 2, 0, 1835021, 2, 0, 1900557, 2, 0, 1507342, 2, 0, 1572878, 2, 0, 1638414, 2, 0, 1703950, 2, 0, 1835022, 2, 0, 1900558, 2, 0, 1507343, 2, 0, 1572879, 2, 0, 1638415, 2, 0, 1703951, 2, 0, 1835023, 2, 0, 1900559, 2, 0, 1507344, 2, 0, 1572880, 2, 0, 1638416, 2, 0, 1703952, 2, 0, 1835024, 2, 0, 1900560, 2, 0, 1507345, 2, 0, 1572881, 2, 0, 1638417, 2, 0, 1703953, 2, 0, 1835025, 2, 0, 1900561, 2, 0, 1507346, 2, 0, 1572882, 2, 0, 1638418, 2, 0, 1703954, 2, 0, 1835026, 2, 0, 1900562, 2, 0, 1507347, 2, 0, 1572883, 2, 0, 1638419, 2, 0, 1703955, 2, 0, 1835027, 2, 0, 1900563, 2, 0, 1507348, 2, 0, 1572884, 2, 0, 1638420, 2, 0, 1703956, 2, 0, 1835028, 2, 0, 1900564, 2, 0, 1507349, 2, 0, 1572885, 2, 0, 1638421, 2, 0, 1703957, 2, 0, 1835029, 2, 0, 1900565, 2, 0, 1507350, 2, 0, 1572886, 2, 0, 1638422, 2, 0, 1703958, 2, 0, 1769494, 2, 0, 1900566, 2, 0, 1507351, 2, 0, 1572887, 2, 0, 1638423, 2, 0, 1703959, 2, 0, 1769495, 2, 0, 1900567, 2, 0, 1507352, 2, 0, 1572888, 2, 0, 1638424, 2, 0, 1703960, 2, 0, 1769496, 2, 0, 1900568, 2, 0, 1507353, 2, 0, 1572889, 2, 0, 1638425, 2, 0, 1703961, 2, 0, 1769497, 2, 0, 1900569, 2, 0, 1507354, 2, 0, 1572890, 2, 0, 1638426, 2, 0, 1703962, 2, 0, 1769498, 2, 0, 1900570, 2, 0, 1507355, 2, 0, 1572891, 2, 0, 1638427, 2, 0, 1703963, 2, 0, 1769499, 2, 0, 1900571, 2, 0, 1507356, 2, 0, 1572892, 2, 0, 1638428, 2, 0, 1703964, 2, 0, 1769500, 2, 0, 1900572, 2, 0, 1507357, 2, 0, 1572893, 2, 0, 1638429, 2, 0, 1703965, 2, 0, 1769501, 2, 0, 1900573, 2, 0, 1507358, 2, 0, 1572894, 2, 0, 1638430, 2, 0, 1703966, 2, 0, 1769502, 2, 0, 1900574, 2, 0, 1507359, 2, 0, 1572895, 2, 0, 1638431, 2, 0, 1703967, 2, 0, 1769503, 2, 0, 1900575, 2, 0, 1507360, 2, 0, 1572896, 2, 0, 1638432, 2, 0, 1703968, 2, 0, 1769504, 2, 0, 1900576, 2, 0, 1507361, 2, 0, 1572897, 2, 0, 1638433, 2, 0, 1703969, 2, 0, 1769505, 2, 0, 1900577, 2, 0, 1507362, 2, 0, 1572898, 2, 0, 1638434, 2, 0, 1703970, 2, 0, 1769506, 2, 0, 1835042, 2, 0, 1507363, 2, 0, 1572899, 2, 0, 1638435, 2, 0, 1703971, 2, 0, 1769507, 2, 0, 1835043, 2, 0, 1376292, 2, 0, 1441828, 2, 0, 1507364, 2, 0, 1572900, 2, 0, 1638436, 2, 0, 1703972, 2, 0, 1769508, 2, 0, 1376293, 2, 0, 1441829, 2, 0, 1507365, 2, 0, 1572901, 2, 0, 1638437, 2, 0, 1703973, 2, 0, 1835045, 2, 0, 1900581, 2, 0, 1900580, 2, 0, 1900578, 2, 0, 1835041, 2, 0, 1835040, 2, 0, 1835039, 2, 0, 1835038, 2, 0, 1835037, 2, 0, 1835036, 2, 0, 1835035, 2, 0, 1835034, 2, 0, 1835033, 2, 0, 1835032, 2, 0, 1835031, 2, 0, 1835030, 2, 0, 1769493, 2, 0, 1769492, 2, 0, 1769491, 2, 0, 1769490, 2, 0, 1769489, 2, 0, 1769488, 2, 0, 1769487, 2, 0, 1769486, 2, 0, 1769485, 2, 0, 1769484, 2, 0, 1769483, 2, 0, 1769482, 2, 0, 1769481, 2, 0, 1769480, 2, 0, 1703943, 2, 0, 1703942, 2, 0, 1703941, 2, 0, 1703940, 2, 0, 1703939, 2, 0, 1703938, 2, 0, 1703937, 2, 0, 1703936, 2, 0, 1769509, 2, 0, 1835044, 2, 0, 1900579, 2, 0, -1179611, 2, 0, -1179612, 2, 0, -1179613, 2, 0, -1179614, 2, 0, -1179615, 2, 0, -1179616, 2, 0, -1179617, 2, 0, -1179618, 2, 0, -1179619, 2, 0, -1179620, 2, 0, -1179621, 2, 0, -1179622, 2, 0, -1179623, 2, 0, -1179624, 2, 0, -1179625, 2, 0, -1179626, 2, 0, -1179627, 2, 0, -1179628, 2, 0, -1179629, 2, 0, -1179637, 2, 0, -1179638, 2, 0, -1179639, 2, 0, -1179640, 2, 0, -1179641, 2, 0, -1179642, 2, 0, -1179643, 2, 0, -1179644, 2, 0, -1179645, 2, 0, -1179646, 2, 0, -1179647, 2, 0, -262144, 2, 0, -196608, 2, 0, -131072, 2, 0, -65536, 2, 0, -917504, 2, 0, -1179648, 2, 0, -1114112, 2, 0, -1048576, 2, 0, -983040, 2, 0, -524288, 2, 0, -458752, 2, 0, -393216, 2, 0, -327680, 2, 0, -1179610, 2, 0, 1376294, 2, 0, 1441830, 2, 0, 1507366, 2, 0, 1572902, 2, 0, 1638438, 2, 0, 1703974, 2, 0, 1769510, 2, 0, 1835046, 2, 0, 1900582, 2, 0, -1179609, 2, 0, 1376295, 2, 0, 1441831, 2, 0, 1507367, 2, 0, 1572903, 2, 0, 1638439, 2, 0, 1703975, 2, 0, 1769511, 2, 0, 1835047, 2, 0, 1900583, 2, 0, -1179608, 2, 0, 1376296, 2, 0, 1441832, 2, 0, 1507368, 2, 0, 1572904, 2, 0, 1638440, 2, 0, 1703976, 2, 0, 1769512, 2, 0, 1835048, 2, 0, 1900584, 2, 0, -1179607, 2, 0, 1376297, 2, 0, 1441833, 2, 0, 1507369, 2, 0, 1572905, 2, 0, 1638441, 2, 0, 1703977, 2, 0, 1769513, 2, 0, 1835049, 2, 0, 1900585, 2, 0, -1179606, 2, 0, 1376298, 2, 0, 1441834, 2, 0, 1507370, 2, 0, 1572906, 2, 0, 1638442, 2, 0, 1703978, 2, 0, 1769514, 2, 0, 1835050, 2, 0, 1900586, 2, 0, -1179605, 2, 0, 1376299, 2, 0, 1441835, 2, 0, 1507371, 2, 0, 1572907, 2, 0, 1638443, 2, 0, 1703979, 2, 0, 1769515, 2, 0, 1835051, 2, 0, 1900587, 2, 0, -1179604, 2, 0, 1376300, 2, 0, 1441836, 2, 0, 1507372, 2, 0, 1572908, 2, 0, 1638444, 2, 0, 1703980, 2, 0, 1769516, 2, 0, 1835052, 2, 0, 1900588, 2, 0, -1179603, 2, 0, 1376301, 2, 0, 1441837, 2, 0, 1507373, 2, 0, 1572909, 2, 0, 1638445, 2, 0, 1703981, 2, 0, 1769517, 2, 0, 1835053, 2, 0, 1900589, 2, 0, -1179602, 2, 0, 1376302, 2, 0, 1441838, 2, 0, 1507374, 2, 0, 1572910, 2, 0, 1638446, 2, 0, 1703982, 2, 0, 1769518, 2, 0, 1835054, 2, 0, 1900590, 2, 0, -1179601, 2, 0, 1376303, 2, 0, 1441839, 2, 0, 1507375, 2, 0, 1572911, 2, 0, 1638447, 2, 0, 1703983, 2, 0, 1769519, 2, 0, 1835055, 2, 0, 1900591, 2, 0, -1179600, 2, 0, 1376304, 2, 0, 1441840, 2, 0, 1507376, 2, 0, 1572912, 2, 0, 1638448, 2, 0, 1703984, 2, 0, 1769520, 2, 0, 1835056, 2, 0, 1900592, 2, 0, -1179599, 2, 0, 1376305, 2, 0, 1441841, 2, 0, 1507377, 2, 0, 1572913, 2, 0, 1638449, 2, 0, 1703985, 2, 0, 1769521, 2, 0, 1835057, 2, 0, 1900593, 2, 0, 65573, 2, 0, 131109, 2, 0, 196645, 2, 0, 262181, 2, 0, 327717, 2, 0, 393253, 2, 0, 458789, 2, 0, 524325, 2, 0, 589861, 2, 0, 655397, 2, 0, 720933, 2, 0, 786469, 2, 0, 852005, 2, 0, 917541, 2, 0, 983077, 2, 0, 1114160, 2, 0, 1179696, 2, 0, 1245232, 2, 0, 1310768, 2, 0, -1114063, 2, 0, -1048527, 2, 0, -982991, 2, 0, -917455, 2, 0, -851919, 2, 0, -786383, 2, 0, -720847, 2, 0, -655311, 2, 0, -589775, 2, 0, -524239, 2, 0, -458703, 2, 0, -393167, 2, 0, -327631, 2, 0, -262095, 2, 0, -196559, 2, 0, -131023, 2, 0, -65487, 2, 0, 49, 2, 0, 65585, 2, 0, 131121, 2, 0, 196657, 2, 0, 262193, 2, 0, 327729, 2, 0, 393265, 2, 0, 458801, 2, 0, 524337, 2, 0, 589873, 2, 0, 655409, 2, 0, 720945, 2, 0, 786481, 2, 0, 852017, 2, 0, 917553, 2, 0, 983089, 2, 0, 1048625, 2, 0, 1114161, 2, 0, 1179697, 2, 0, 1245233, 2, 0, 1310769, 2, 0, 36, 2, 0, 35, 2, 0, 34, 2, 0, 33, 2, 0, 32, 2, 0, -1638389, 2, 0, -1703925, 2, 0, -1769461, 2, 0, -1834997, 2, 0, -1900533, 2, 0, -1966069, 2, 0, -2031605, 2, 0, -2097141, 2, 0, -2162677, 2, 0, -2228213, 2, 0, -2293749, 2, 0, -2359285, 2, 0, -2424821, 2, 0, -2490357, 2, 0, -2555894, 2, 0, -2621430, 2, 0, -2686965, 2, 0, -2621429, 2, 0, -2555893, 2, 0, -2686964, 2, 0, -2686963, 2, 0, -2686962, 2, 0, -2686961, 2, 0, -2686960, 2, 0, -2686959, 2, 0, -2686958, 2, 0, -2686957, 2, 0, -2686956, 2, 0, -2686955, 2, 0, -2686954, 2, 0, -2686953, 2, 0, -2686952, 2, 0, -2686951, 2, 0, -2686950, 2, 0, -2686949, 2, 0, -2686948, 2, 0, -2686947, 2, 0, -2686946, 2, 0, -2686945, 2, 0, -2686944, 2, 0, -2686943, 2, 0, -2686942, 2, 0, -2686941, 2, 0, -2686940, 2, 0, -2686939, 2, 0, -2686938, 2, 0, -2686937, 2, 0, -2686936, 2, 0, -2686935, 2, 0, -2621399, 2, 0, -2555863, 2, 0, -2490327, 2, 0, -2424791, 2, 0, -2359255, 2, 0, -2293719, 2, 0, -2228183, 2, 0, -2162647, 2, 0, -2097111, 2, 0, -2031575, 2, 0, -1966039, 2, 0, -1900503, 2, 0, -1834967, 2, 0, -1769431, 2, 0, -1703895, 2, 0, -1638359, 2, 0, -1572823, 2, 0, -1507287, 2, 0, -1441751, 2, 0, -1376215, 2, 0, -1310679, 2, 0, -1245143, 2, 0, -524280, 2, 0, -524281, 2, 0, -524282, 2, 0, -524283, 2, 0, -524284, 2, 0, -524285, 2, 0, -524286, 2, 0, -524287, 2, 0, -458753, 2, 0, -1179636, 2, 0, -1179635, 2, 0, -1179634, 2, 0, -1179633, 2, 0, -1179632, 2, 0, -1179631, 2, 0, -1179630, 2, 0, -1245184, 2, 0, -1310720, 2, 0, -1376256, 2, 0, -1441792, 2, 0, -1507328, 2, 0, -1572864, 2, 0, -1638400, 2, 0, -1703936, 2, 0, -1638401, 2, 0, -1638402, 2, 0, -1638403, 2, 0, -1638404, 2, 0, -1638405, 2, 0, -1638406, 2, 0, -1638407, 2, 0, -1638408, 2, 0, -1638409, 2, 0, -1638410, 2, 0, -1638411, 2, 0, -1638412, 2, 0, -1638413, 2, 0, -1638414, 2, 0, -1638415, 2, 0, -1638416, 2, 0, -1638417, 2, 0, -1638418, 2, 0, -1638419, 2, 0, -1638420, 2, 0, -1638421, 2, 0, -1638422, 2, 0, -1638423, 2, 0, -1638424, 2, 0, -1638425, 2, 0, -1638426, 2, 0, -1638427, 2, 0, -1638438, 2, 0, -1572902, 2, 0, -1507366, 2, 0, -1441830, 2, 0, -1376294, 2, 0, -1310758, 2, 0, -1245222, 2, 0, -1179686, 2, 0, -1114150, 2, 0, -1048614, 2, 0, -983078, 2, 0, -917542, 2, 0, -852006, 2, 0, -786470, 2, 0, -720934, 2, 0, -655398, 2, 0, -589862, 2, 0, -524326, 2, 0, -458790, 2, 0, -393254, 2, 0, -327718, 2, 0, -262182, 2, 0, -196646, 2, 0, -131110, 2, 0, -65574, 2, 0, -38, 2, 0, 65498, 2, 0, 131034, 2, 0, 196570, 2, 0, 262106, 2, 0, 327642, 2, 0, 393178, 2, 0, 458714, 2, 0, 524250, 2, 0, 524251, 2, 0, 524252, 2, 0, 524253, 2, 0, 524254, 2, 0, 524255, 2, 0, 524256, 2, 0, 524257, 2, 0, 524258, 2, 0, 524259, 2, 0, 524260, 2, 0, 524261, 2, 0, 524262, 2, 0, 524263, 2, 0, 524264, 2, 0, 524265, 2, 0, 524266, 2, 0, 524267, 2, 0, 524268, 2, 0, 524269, 2, 0, 524270, 2, 0, 524271, 2, 0, 524272, 2, 0, 524273, 2, 0, 524274, 2, 0, 524275, 2, 0, 524276, 2, 0, 524277, 2, 0, 524278, 2, 0, 524279, 2, 0, 524280, 2, 0, 524281, 2, 0, 524282, 2, 0, 524283, 2, 0, 524284, 2, 0, 524285, 2, 0, 524286, 2, 0, 524287, 2, 0, 262115, 2, 0, 262143, 2, 0, 262142, 2, 0, 262141, 2, 0, 262140, 2, 0, 262139, 2, 0, 262138, 2, 0, 262137, 2, 0, 262136, 2, 0, 262135, 2, 0, 262134, 2, 0, 262133, 2, 0, 262132, 2, 0, 262131, 2, 0, 262130, 2, 0, 262129, 2, 0, 262128, 2, 0, 262127, 2, 0, 262126, 2, 0, 262125, 2, 0, 262124, 2, 0, 262123, 2, 0, 262122, 2, 0, 262121, 2, 0, 262120, 2, 0, 262119, 2, 0, 262118, 2, 0, 262117, 2, 0, 262116, 2, 0, -458788, 2, 0, -458789, 2, 0, -393217, 2, 0, -327681, 2, 0, -262145, 2, 0, -196609, 2, 0, -131073, 2, 0, -65537, 2, 0, -1, 2, 0, 65535, 2, 0, 131071, 2, 0, 196607, 2, 0, -458754, 2, 0, -393218, 2, 0, -327682, 2, 0, -262146, 2, 0, -196610, 2, 0, -131074, 2, 0, -65538, 2, 0, -2, 2, 0, 65534, 2, 0, 131070, 2, 0, 196606, 2, 0, 262114, 2, 0, 262113, 2, 0, 262112, 2, 0, 262111, 2, 0, 262110, 2, 0, 262109, 2, 0, 262108, 2, 0, 262107, 2, 0, -458787, 2, 0, -458786, 2, 0, -458785, 2, 0, -589856, 2, 0, -589855, 2, 0, -393252, 2, 0, -327716, 2, 0, -262180, 2, 0, -196644, 2, 0, -131108, 2, 0, -65572, 2, 0, -36, 2, 0, 65500, 2, 0, 131036, 2, 0, 196572, 2, 0, -589857, 2, 0, -524321, 2, 0, -393249, 2, 0, -327713, 2, 0, -262177, 2, 0, -196641, 2, 0, -131105, 2, 0, -65569, 2, 0, -33, 2, 0, 65503, 2, 0, 131039, 2, 0, 196575, 2, 0, -1638428, 2, 0, -1703974, 2, 0, -1769510, 2, 0, -1835046, 2, 0, -1900582, 2, 0, -1966118, 2, 0, -2031654, 2, 0, -2097190, 2, 0, -2162726, 2, 0, -2228262, 2, 0, -2293798, 2, 0, -2359334, 2, 0, -2424870, 2, 0, -2490406, 2, 0, -2555942, 2, 0, -2621478, 2, 0, -2687014, 2, 0, -2752550, 2, 0, -2818086, 2, 0, -2818085, 2, 0, -2818084, 2, 0, -2818083, 2, 0, -2818082, 2, 0, -2818081, 2, 0, -2818080, 2, 0, -2818079, 2, 0, -2818078, 2, 0, -2818077, 2, 0, -2818076, 2, 0, -2818075, 2, 0, -2818074, 2, 0, -2818073, 2, 0, -2818072, 2, 0, -2818071, 2, 0, -2818070, 2, 0, -2818069, 2, 0, -2818068, 2, 0, -2818067, 2, 0, -2818066, 2, 0, -2818065, 2, 0, -2818064, 2, 0, -2818063, 2, 0, -2818062, 2, 0, -2818061, 2, 0, -2818060, 2, 0, -2818059, 2, 0, -2818058, 2, 0, -2818057, 2, 0, -2818056, 2, 0, -2818055, 2, 0, -2818054, 2, 0, -2818053, 2, 0, -2818052, 2, 0, -2818051, 2, 0, -2818050, 2, 0, -2818049, 2, 0, -2883584, 2, 0, -2818048, 2, 0, -2752512, 2, 0, -2686976, 2, 0, -2621440, 2, 0, -2555904, 2, 0, -2490368, 2, 0, -2424832, 2, 0, -2359296, 2, 0, -2293760, 2, 0, -2228224, 2, 0, -2162688, 2, 0, -2686975, 2, 0, -2686974, 2, 0, -2686973, 2, 0, -2686972, 2, 0, -2686971, 2, 0, -2686970, 2, 0, -2686969, 2, 0, -2686968, 2, 0, -2686967, 2, 0, -2686966, 2, 0, -1703943, 2, 0, -1769480, 2, 0, -1835017, 2, 0, -1900554, 2, 0, -1966091, 2, 0, -2031628, 2, 0, -2097165, 2, 0, -2162702, 2, 0, -2228239, 2, 0, -2293776, 2, 0, -2359313, 2, 0, -2424850, 2, 0, -2424852, 2, 0, -2424851, 2, 0)
script = ExtResource("4_fsb1h")

[node name="Node2D" type="Node2D" parent="."]
visible = false
script = ExtResource("11_vqrrg")
next_scene = "res://scenes/levels/lvl06.tscn"
sprite_frames = ExtResource("12_8s6d8")

[node name="Control" type="Control" parent="Node2D"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Narration2" type="RichTextLabel" parent="Node2D/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -81.0
offset_right = 100.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.979735, 1.04318)
theme = ExtResource("12_7rmdw")
theme_override_colors/default_color = Color(0, 0, 0, 0.188235)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
bbcode_enabled = true
text = "[center][wave]LUNA"
scroll_active = false
autowrap_mode = 0

[node name="Narration" type="RichTextLabel" parent="Node2D/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -86.0
offset_right = 102.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_7rmdw")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
bbcode_enabled = true
text = "[center][wave]LUNA"
scroll_active = false
autowrap_mode = 0

[node name="GameEndAudio" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("13_ojj7r")
volume_db = -4.952
pitch_scale = 0.8

[node name="Bounds" type="Node2D" parent="."]

[node name="CameraBounds" type="Area2D" parent="Bounds"]
position = Vector2(151, 89.5)
script = ExtResource("13_4xv4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/CameraBounds"]
shape = SubResource("RectangleShape2D_fxk8i")

[node name="CameraBounds2" type="Area2D" parent="Bounds"]
position = Vector2(348, 18.5)
script = ExtResource("13_4xv4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/CameraBounds2"]
shape = SubResource("RectangleShape2D_8mv2g")

[node name="CameraBounds3" type="Area2D" parent="Bounds"]
position = Vector2(154, -70.25)
script = ExtResource("13_4xv4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/CameraBounds3"]
shape = SubResource("RectangleShape2D_m7wsu")

[node name="CameraBounds4" type="Area2D" parent="Bounds"]
position = Vector2(212, -234)
script = ExtResource("13_4xv4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/CameraBounds4"]
shape = SubResource("RectangleShape2D_ep5xb")

[node name="CameraBounds5" type="Area2D" parent="Bounds"]
position = Vector2(-149, -132)
script = ExtResource("13_4xv4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/CameraBounds5"]
shape = SubResource("RectangleShape2D_oi03i")

[node name="CameraBounds6" type="Area2D" parent="Bounds"]
position = Vector2(-149, -275)
script = ExtResource("13_4xv4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/CameraBounds6"]
shape = SubResource("RectangleShape2D_oi03i")

[node name="Narrators" type="Node2D" parent="."]

[node name="Narrator" parent="Narrators" instance=ExtResource("14_nw67w")]
visible = false
narrations = [":) "]

[node name="Narrator2" parent="Narrators" instance=ExtResource("14_nw67w")]
visible = false
position = Vector2(415, 70)
narration_offset = Vector2(-16, -32)
narration_delay = 2.5
narrations = ["Fall on walls", "to slide", "Jump while sliding", "to wallkick"]
debug_narration = "to wallkick"

[node name="Narrator3" parent="Narrators" instance=ExtResource("14_nw67w")]
position = Vector2(891, 23)
narration_delay = 2.0
narration_end_delay = 0.0
narrations = ["^
|"]

[node name="Narrator4" parent="Narrators" instance=ExtResource("14_nw67w")]
visible = false
position = Vector2(921, -151)
narration_delay = 2.0
narration_end_delay = 0.0
narrations = ["->"]

[node name="Narrator5" parent="Narrators" instance=ExtResource("14_nw67w")]
position = Vector2(297, -231)
narration_offset = Vector2(-52, -32)
narration_delay = 2.0
narration_end_delay = 1.0
narrations = ["Press SPACE to meow"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(120, 91)
position_smoothing_enabled = true
script = ExtResource("15_1wtht")

[node name="Player" parent="." instance=ExtResource("16_kqhd0")]
collision_layer = 3

[node name="Control" parent="." instance=ExtResource("17_f26qw")]
visible = false

[node name="PlayerEnabler2" type="Node2D" parent="."]
position = Vector2(-140, -336)
script = ExtResource("18_lgo8h")
enable_meow = true

[node name="PlayerDetector" type="Area2D" parent="PlayerEnabler2"]
collision_layer = 0
collision_mask = 2
script = ExtResource("19_5yjjh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerEnabler2/PlayerDetector"]
position = Vector2(351.5, 104)
shape = SubResource("RectangleShape2D_g0hw2")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -759.0
offset_top = -818.0
offset_right = 1938.0
offset_bottom = 7737.0
color = Color(0, 0, 0, 1)
script = ExtResource("20_k6two")

[connection signal="disable_phase" from="Phase/BackPhase/TileMap/PhaseComponent" to="Phase/BackPhase/TileMap" method="_on_phase_component_disable_phase"]
[connection signal="enable_phase" from="Phase/BackPhase/TileMap/PhaseComponent" to="Phase/BackPhase/TileMap" method="_on_phase_component_enable_phase"]
[connection signal="disable_phase" from="Phase/FrontPhase/TileMap2/PhaseComponent" to="Phase/FrontPhase/TileMap2" method="_on_phase_component_disable_phase"]
[connection signal="enable_phase" from="Phase/FrontPhase/TileMap2/PhaseComponent" to="Phase/FrontPhase/TileMap2" method="_on_phase_component_enable_phase"]
[connection signal="player_entered" from="PlayerEnabler2/PlayerDetector" to="Narrators/Narrator5" method="_on_player_detector_player_entered"]
[connection signal="player_entered" from="PlayerEnabler2/PlayerDetector" to="PlayerEnabler2" method="_on_player_detector_player_entered"]
[connection signal="player_exited" from="PlayerEnabler2/PlayerDetector" to="PlayerEnabler2" method="_on_player_detector_player_exited"]
